--- a/register.html
+++ b/register.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <form>
-            <h1>Welcome to Deeper Life December Retreat Ore Region</h1>
+            <div>
+                    <img src='https://res.cloudinary.com/ezeko/image/upload/v1574728286/images/dlcm_logo_tyrhka.jpg'>
+                    <h1>Welcome to Deeper Life December Retreat Ore Region</h1>
+            </div>
             <h2>Do not hesistate to fill the below Spaces correctly</h2>
             <h5>God bless you!!!!!</h5>
             <div id="form">
