--- a/register.html
+++ b/register.html
@@ -51,12 +51,12 @@
                 female<input type="radio" name="gender" value="female" required>
             </div>
             <div>
-                <select>
-                    <option value='none' required>Select Category</option>
-                    <option value="children" aria-required="true">Children</option>
-                    <option value="youth" aria-required="true">Youth</option>
-                    <option value="campus">Campus</option>
-                    <option value="adult">Adult</option>
+                <select name="category" id="category">
+                    <option name="category" id="category" value='none' >Select Category</option>
+                    <option name="category" id="category" value="children">Children</option>
+                    <option name="category" id="category" value="youth"  >Youth</option>
+                    <option name="category" id="category" value="campus"  >Campus</option>
+                    <option name="category" id="category" value="adult"  >Adult</option>
                 </select>
             </div>
             <div id="ageSelection">
