--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
                     <img src='https://res.cloudinary.com/ezeko/image/upload/v1574728286/images/dlcm_logo_tyrhka.jpg'>
                     <h1>Welcome to Deeper Life December Retreat Ore Region</h1>
             <h2>Do not hesistate to fill the below Spaces correctly</h2>
-            <h5>God bless you!!!!!</h5>
+            <h5 class="blinking">God bless you!!!!!</h5>
             <div id="form">
             <div>
                 <label for="name">Your Surname<b>*</b></label>
