added landing page

--- a/register.html
+++ b/register.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./css/style.css" >
+        <title>DLDR-REGISTERATION</title>
+        <link rel="icon" type="image/jpg" href='https://res.cloudinary.com/ezeko/image/upload/v1574728286/images/dlcm_logo_tyrhka.jpg'>
+            
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <meta name="viewport" content="width=device-width initial-scale=1">
+            <meta name="description" content="responsive landing page, made by adejobi ezekiel, responsive landing page template, made in nigeria">
+            <meta name="keyword" content="Ezekielcodes, responsive web form, 100days of coding, Adejobi Ezekiel, Ezekoconcept, ezeko, FreeCodeCamp-Ezeko,
+             html5, html, php developer, css template, landing page, landing page template">
 
     </head>
     <body>
