--- a/index.html
+++ b/index.html
@@ -20,35 +20,16 @@
                 <nav id="nav-bar">
                     <a href="#" class="active nav-link">Home</a>
                     <a href="./register.html" class="nav-link"> Register</a>
-                    <a href="#about" class="nav-link"> Admin </a>
+                    
 
                 </nav>
             </nav></div>
             <div id="main">
                 <div id="about">
-                    <h1 id="about-h1">ABOUT US</h1>
-                    <h2>Ezekoconcept is a Nigerian based company that deals with all kinds of legal business you can think of.
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                         Blanditiis provident tempora odio ea eius, 
-                         culpa nisi quasi dolorum laboriosam animi eum velit neque mollitia impedit nesciunt!
-                          Commodi blanditiis enim repellendus!
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                           Ut, provident obcaecati temporibus unde sint ab ratione atque itaque?
-                           Commodi inventore consequuntur sed quam corporis fugiat qui est ipsam aliquid molestiae?
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugiat fugit saepe,
-                            necessitatibus voluptatibus ad dicta porro magnam soluta? Earum eveniet quas ipsum nobis,
-                            quod aspernatur deleniti non fugit maiores?
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                            Praesentium, quod a corrupti veritatis maiores quae recusandae accusamus maxime porro aspernatur.
-                            Alias perferendis ut debitis deleniti velit consequuntur consectetur exercitationem fugiat.
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, sequi?
-                            Suscipit neque exercitationem molestiae quibusdam, modi, eligendi rem magnam cupiditate earum minima similique!
-                            Rem natus nobis eaque perferendis quae pariatur.
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. In nobis sunt tenetur aliquid repellat minus laboriosam, 
-                            quam placeat modi? Nostrum illo earum doloribus suscipit possimus accusantium error provident veniam iure!
-                    </h2>
+                    <h1 id="about-h1" class="blinking">WELCOME TO DEEPER LIFE NATIONAL DECEMBER RETREAT!</h1>
+                    <img width="100%" height="500px" src="https://res.cloudinary.com/ezeko/image/upload/v1575449121/images/WhatsApp_Image_2019-11-26_at_11.48.05_AM_zzprc7.jpg" alt="Retreat banner">
                 </div>
-                <div id="contact">
+              <!--  <div id="contact">
                 <h1 id="contact-h1">OUR CONTACT</h1>
                 <div id="contact-details"> 
                     <i class="fa fa-home"></i><h2>38, Nnamdi Azikwe Road, Nnewi, Enugu State</h2>
@@ -63,16 +44,16 @@
                         <input type="email" id="email" placeholder=" Kindly enter your email address" required>
                         <button type="submit" value="SUBMIT">Submit Your Email</button>
                     </form>
-                </div>
+                </div>-->
             </div>
             <div id="footer">
                    <p> &copy Ezekielcodes 2019.</p> 
-                   <div class="social">
+                   <!--<div class="social">
                    <i class="fa fa-facebook"></i>
                     <i class="fa fa-twitter" ></i>
                     <i class="fa fa-github" ></i>
                     <i class="fa fa-linkedin" ></i>
-                </div>
+                </div>-->
             </div>
             </div>
     </body>
