--- a/register.html
+++ b/register.html
@@ -43,15 +43,15 @@
             </div>
             <div class="yes show">
                 <label for="district">Your Group of District<b>*</b></label>
-                <input type="text" placeholder="Your Group of District" name="district" required />
+                <input type="text" placeholder="Your Group of District put none if not a member" name="district" required />
             </div>
             <div class="yes show">
                 <label for="location">Your District Location<b>*</b></label>
-                <input type="text" placeholder="Your District Location" name="location" required />
+                <input type="text" id="location" placeholder="Your District Location put none if not a member" name="location" required />
             </div>
             <div class="no show">
                 <label for="denomination">Your Denomination<b>*</b></label>
-                <input type="text" placeholder="Your Denomination" name="denomination" required />
+                <input type="text" placeholder="Your Denomination put DLBC if a member" name="denomination" required />
             </div>
             <div id="genderSelection">
                 <label for="gender">Gender<b>*</b></label>
