--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     <body>
         <form action="backend/reg_validate.php" method="POST">
                     <img src='https://res.cloudinary.com/ezeko/image/upload/v1574728286/images/dlcm_logo_tyrhka.jpg'>
-                    <h1>Welcome to Deeper Life December Retreat Ore Region</h1>
+                    <h1>Welcome to Deeper Life 2019 December Retreat Ore Region</h1>
             <h2>Do not hesistate to fill the below Spaces correctly</h2>
             <h5 class="blinking">God bless you!!!!!</h5>
             <div id="form">
@@ -74,7 +74,7 @@
                 14-18<input type="radio" name="age" value="14-18" required>
                 19-25<input type="radio" name="age" value="19-25" required>
                 26-40<input type="radio" name="age" value="26-40" required>
-                40 & above<input type="radio" name="age" value="40 & above" required>
+                40 & above<input type="radio" name="age" value="40&above" required>
 
             </div>
 
